--- a/finalProject/styles/style.css
+++ b/finalProject/styles/style.css
@@ -97,7 +97,7 @@
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
   width: 100%;
-  height: 588px;
+  height: 588px; 
 }
 
 .mainTitle {
@@ -134,22 +134,22 @@
   }
   }
 
-@keyframes slider {
+/* @keyframes slider {
   0% {
-      background-image: url("/img/slider1.jpg");
+      background-image: url("../img/slider1.jpg");
       background-size:  1700px;
   }
 
   50% {
-    background-image: url("/img/slider2.jpg");
+    background-image: url("../img/slider2.jpg");
     background-size: 1700px;
   }
  
   100% {
-    background-image: url("/img/slider3.jpg");
+    background-image: url("../img/slider3.jpg");
     background-size: 1700px;
   }
-  }
+  } */
 
 /* navigation */
 .fa  {
